sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:5: error: ')' expected but ';' found.
      echange(i;i+1)
               ^AlgCocktailSort1:5: error: ';' expected but ')' found.
      echange(i;i+1)
                   ^